feat(menu) : add endpoint menu detail by id
